# nonebot-plugin-simple-gpt

./: README.md  __init__.py  chat.py  pyproject.toml
